ajouter scan dynamicsoft

--- a/scan/src/main/webapp/index.html
+++ b/scan/src/main/webapp/index.html
@@ -58,7 +58,12 @@
         <script src="bower_components/json3/lib/json3.js"></script>
         <script src="bower_components/ng-file-upload/ng-file-upload.js"></script>
         <script src="bower_components/ngInfiniteScroll/build/ng-infinite-scroll.js"></script>
-<!--         <script src="bower_components/bower_components/scanner.js/dist/scanner.js"></script> -->
+       <!-- <script src="bower_components/scanner.js/dist/scanner.js"></script> -->
+
+        <script src="bower_components/Resources/dynamsoft.webtwain.initiate.js"></script> 
+        <script src="bower_components/Resources/dynamsoft.webtwain.config.js"></script>
+        <script src="bower_components/Resources/dynamsoft.webtwain.install.js"></script>
+
         <!-- endbower -->
         <!-- endbuild -->
 
@@ -140,6 +145,7 @@
     <script src="scripts/components/auth/provider/auth.session.service.js"></script>
     <script src="scripts/app/account/sessions/sessions.js"></script>
     <script src="scripts/app/account/sessions/sessions.controller.js"></script>
+    <script src="scripts/app/main/scan.controller.js"></script>
     <!-- endbuild -->
 </body>
 </html>
