--- a/scan/src/main/webapp/scripts/app/main/main.html
+++ b/scan/src/main/webapp/scripts/app/main/main.html
@@ -23,20 +23,28 @@
 
             <p>
                 If you have any question on JHipster:
-                <button ng-click="scanner()" ></button>
+
+
+                                                <label for="source">
+                                                <p>Select Source:</p>
+                                                </label>
+                                                <select size="1" id="source" style="position:relative;" ng-onchange="source_onchange()">
+                                                    <option value = ""></option>
+                                                </select>
+
+
+
+                <button ng-click="load()" >LOAD</button>
+                <button ng-click="scanner()" >IMPRIMER</button>
+                <div id="images"></div>
+                <div id="dwtcontrolContainer"></div> 
+
+
             </p>
 
-            <ul>
-                <li><a href="http://jhipster.github.io/" target="_blank">JHipster homepage</a></li>
-                <li><a href="http://stackoverflow.com/tags/jhipster/info" target="_blank">JHipster on Stack Overflow</a></li>
-                <li><a href="https://github.com/jhipster/generator-jhipster/issues?state=open" target="_blank">JHipster bug tracker</a></li>
-                <li><a href="https://gitter.im/jhipster/generator-jhipster" target="_blank">JHipster public chat room</a></li>
-                <li><a href="https://twitter.com/java_hipster" target="_blank" >contact @java_hipster on Twitter</a></li>
-            </ul>
 
-            <p>
-             <span>If you like JHipster, don't forget to give us a star on </span>&nbsp;<a href="https://github.com/jhipster/generator-jhipster" target="_blank">Github</a>!
-            </p>
+
+         
         </div>
     </div>
 </div>
